# gemini-mcp-connect

./: README.md  install.ps1  install.sh  pyproject.toml
